# JNI

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/java/com/example/jnidemo/: MainActivity.java
app/src/main/jni/: com_example_jnidemo_MainActivity.h  hello_jni.cpp
app/src/main/res/layout/: activity_main.xml
